Added endQuiz,answerQuestion function and README update

--- a/highscores.html
+++ b/highscores.html
@@ -13,11 +13,10 @@
     <div class="wrapper">
       <h1>Highscores</h1>
       <ol id="highscores"></ol>
-
       <a href="index.html"><button>Go Back</button></a>
-      <button id="clear">Clear Highscores</button>
+      <button id="clear-highscores-button" onclick="clearHighscores()">Clear Highscores</button>
     </div>
-
-    <script src="script/scores.js"></script>
+  <script  src="script/logic.js"></script>
+  <script  src="script/scores.js"></script>
   </body>
 </html>
